# TaskManagerClone

./: .gitmodules  CMakeLists.txt
TaskManagerClone/: CMakeLists.txt
TaskManagerClone/src/: CMakeLists.txt  Main.cpp  ProcessInfo.h  ProcessList.h  ProcessesFactory.cpp  ProcessesFactory.h  ProcessesImpl.h  RabinKarpAlg.cpp  RabinKarpAlg.h  SysInfo.h  SysInfoFacade.h  SysInfoFactory.cpp  SysInfoFactory.h  SysInfoImpl.h  TaskManagerApp.cpp  TaskManagerApp.h
TaskManagerClone/src/UI/: CMakeLists.txt  ProcessesPanel.cpp  ProcessesPanel.h  ProcessesTable.cpp  ProcessesTable.h  SysInfoPanel.cpp  SysInfoPanel.h  SysInfoTable.cpp  SysInfoTable.h  TaskManagerApp.cpp  TaskManagerApp.h
TaskManagerClone/src/linux/: CMakeLists.txt  LinuxFactory.h  LinuxProcessesImpl.cpp  LinuxProcessesImpl.h  LinuxSysInfoImpl.cpp  LinuxSysInfoImpl.h
TaskManagerClone/src/windows/: CMakeLists.txt  WindowsFactory.h  WindowsProcessesImpl.cpp  WindowsProcessesImpl.h  WindowsSysInfoImpl.cpp  WindowsSysInfoImpl.h
